Change MainPage header to Wallets, made MainPage empty

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -7,7 +7,7 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title="Wallets"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
