--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Viru.MainPage">
 
-    <Label>Wallets are gonna be here TODO</Label>
+    <Grid>
+        <Label>Wallets are gonna be here TODO</Label>
+
+        <AbsoluteLayout>
+            <!--Other components-->
+            <Button x:Name="mainPageActionButton" Text="+"
+                    FontSize="35"
+            BackgroundColor="{StaticResource Primary}"
+        CornerRadius="100"
+            AbsoluteLayout.LayoutFlags="PositionProportional"  
+            AbsoluteLayout.LayoutBounds="0.95, 0.975, 65, 65" />
+        </AbsoluteLayout>
+    </Grid>
 
 </ContentPage>
