--- a/Viru/MainPage.xaml
+++ b/Viru/MainPage.xaml
@@ -4,7 +4,23 @@
              x:Class="Viru.MainPage">
 
     <Grid>
-        <Label>Wallets are gonna be here TODO</Label>
+        <ListView x:Name="walletsList">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="50*" />
+                                <ColumnDefinition Width="50*" />
+                            </Grid.ColumnDefinitions>
+
+                            <Label Text="{Binding Id}" Grid.Column="0" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+                            <Label Text="{Binding Name}" Grid.Column="1" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
         <AbsoluteLayout>
             <!--Other components-->
