--- a/Viru/MainPage.xaml
+++ b/Viru/MainPage.xaml
@@ -4,19 +4,28 @@
              x:Class="Viru.MainPage">
 
     <Grid>
-        <ListView x:Name="walletsList">
+        <ListView x:Name="walletsList" RowHeight="50" Margin="5" SelectionMode="None">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="50*" />
-                                <ColumnDefinition Width="50*" />
-                            </Grid.ColumnDefinitions>
+                        <ViewCell.ContextActions>
+                            <MenuItem Text="Edit" />
+                            <MenuItem Text="Delete" />
+                        </ViewCell.ContextActions>
+                        <Border BackgroundColor="#393E40" Padding="10">
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="10,10,10,10" />
+                            </Border.StrokeShape>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="50*" />
+                                    <ColumnDefinition Width="50*" />
+                                </Grid.ColumnDefinitions>
 
-                            <Label Text="{Binding Id}" Grid.Column="0" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
-                            <Label Text="{Binding Name}" Grid.Column="1" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
-                        </Grid>
+                                <Label Text="{Binding Name}" Grid.Column="0" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+                                <Label Text="{Binding Created}" Grid.Column="1" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+                            </Grid>
+                        </Border>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
