--- a/Viru/AppShell.xaml
+++ b/Viru/AppShell.xaml
@@ -4,12 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Viru"
-    Shell.FlyoutBehavior="Flyout">
+    Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Wallets"
+        Title="Viru"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-    
+
 
 </Shell>
