--- a/Viru/MainPage.xaml
+++ b/Viru/MainPage.xaml
@@ -12,9 +12,9 @@
                             <MenuItem Text="Edit" />
                             <MenuItem Text="Delete" />
                         </ViewCell.ContextActions>
-                        <Border BackgroundColor="#393E40" Padding="10">
+                        <Border BackgroundColor="#07393C" Padding="10" Stroke="#F0EDEE">
                             <Border.StrokeShape>
-                                <RoundRectangle CornerRadius="10,10,10,10" />
+                                <RoundRectangle CornerRadius="5,5,5,5" />
                             </Border.StrokeShape>
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -22,8 +22,8 @@
                                     <ColumnDefinition Width="50*" />
                                 </Grid.ColumnDefinitions>
 
-                                <Label Text="{Binding Name}" Grid.Column="0" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
-                                <Label Text="{Binding Created}" Grid.Column="1" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+                                <Label Text="{Binding Name}" Grid.Column="0" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="18"></Label>
+                                <Label Text="{Binding Created}" Grid.Column="1" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="18"></Label>
                             </Grid>
                         </Border>
                     </ViewCell>
