--- a/Viru/MainPage.xaml
+++ b/Viru/MainPage.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             Shell.NavBarHasShadow="True"
              x:Class="Viru.MainPage">
 
     <Grid>
-        <ListView x:Name="walletsList" RowHeight="50" Margin="5" SelectionMode="None">
+        <ListView x:Name="walletsList" RowHeight="55" Margin="5, 20, 5, 0" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -12,18 +13,18 @@
                             <MenuItem Text="Edit" />
                             <MenuItem x:Name="DeleteMenuItem" Text="Delete" Clicked="DeleteMenuItem_Clicked"  CommandParameter="{Binding Id}" />
                         </ViewCell.ContextActions>
-                        <Border BackgroundColor="#07393C" Padding="10" Stroke="#F0EDEE">
+                        <Border BackgroundColor="White" Padding="15" Stroke="#F0EDEE" Margin="0, 0, 0, 10">
                             <Border.StrokeShape>
                                 <RoundRectangle CornerRadius="5,5,5,5" />
                             </Border.StrokeShape>
+                            <Border.Shadow>
+                                <Shadow Brush="#2f2f2f"
+                   Offset="1,1"
+                   Radius="0"
+                   Opacity="0.3"/>
+                            </Border.Shadow>                        
                             <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="50*" />
-                                    <ColumnDefinition Width="50*" />
-                                </Grid.ColumnDefinitions>
-
-                                <Label Text="{Binding Name}" Grid.Column="0" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="18"></Label>
-                                <Label Text="{Binding Created}" Grid.Column="1" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="18"></Label>
+                                <Label Text="{Binding Name}" Grid.Column="0" TextColor="Black" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="18"></Label>
                             </Grid>
                         </Border>
                     </ViewCell>
@@ -35,10 +36,16 @@
             <!--Other components-->
             <Button x:Name="mainPageActionButton" Text="+"
                     FontSize="35" Clicked="mainPageActionButton_Clicked"
-            BackgroundColor="{StaticResource Primary}"
+            TextColor="White" BackgroundColor="{StaticResource Primary}"
         CornerRadius="100"
             AbsoluteLayout.LayoutFlags="PositionProportional"  
-            AbsoluteLayout.LayoutBounds="0.95, 0.975, 65, 65" />
+            AbsoluteLayout.LayoutBounds="0.95, 0.975, 65, 65">
+                <Button.Shadow>
+                    <Shadow Brush="Black"
+                Offset="5,5"
+                Opacity="0.4" />
+                </Button.Shadow>
+            </Button>
         </AbsoluteLayout>
     </Grid>
 
