--- a/Viru/PaymentPage.xaml
+++ b/Viru/PaymentPage.xaml
@@ -1,11 +1,56 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" Background="{StaticResource Primary}"
              x:Class="Viru.PaymentPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <Shell.TitleView>
+        <Grid ColumnDefinitions="80*,18*,18*">
+            <Label x:Name="TitleBarText" HorizontalOptions="Start" FontSize="18" FontAttributes="Bold" TextColor="White" Grid.Column="0" VerticalTextAlignment="Center" />
+            <Button Text="+" Grid.Column="1" FontSize="Large" HorizontalOptions="End"/>
+            <Button Text="◢" Grid.Column="2" FontSize="Large" HorizontalOptions="Start" />
+        </Grid>        
+    </Shell.TitleView>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60*" />
+            <RowDefinition Height="40*" />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" BackgroundColor="{StaticResource Primary}">
+            <Grid>
+                <Label Grid.Row="0" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="50" TextColor="#cc0000">-10000 PLN</Label>
+            </Grid>
+        </Grid>
+
+        <Border Grid.Row="1" StrokeShape="RoundRectangle 20,20,0,0" Stroke="White" StrokeThickness="0" BackgroundColor="White">
+            <ListView x:Name="payments" Grid.Row="0" RowHeight="55" Margin="5, 20, 5, 0" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Border BackgroundColor="White" Padding="8" Stroke="{Binding PaymentColor}" Margin="10, 10, 0, 10">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="5,5,5,5" />
+                                </Border.StrokeShape>
+                                <Border.Shadow>
+                                    <Shadow Brush="{Binding PaymentColor}"
+                                   Offset="1,1"
+                                   Radius="10"
+                                   Opacity="0.3"/>
+                                </Border.Shadow>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="50*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding Description}" Grid.Column="0" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="16"></Label>
+                                    <Label Text="{Binding PaymentCurrency}" Grid.Column="1" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20"></Label>
+                                </Grid>
+                            </Border>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>            
+        </Border>
+
+    </Grid>
 </ContentPage>
