--- a/Viru/Resources/Styles/Colors.xaml
+++ b/Viru/Resources/Styles/Colors.xaml
@@ -4,9 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#2c6e49</Color>
-    <Color x:Key="Secondary">#4c956c</Color>
-    <Color x:Key="Tertiary">#d68c45</Color>
+    <Color x:Key="Primary">#0802A3</Color>
+    <Color x:Key="Secondary">#362FD9</Color>
+    <Color x:Key="Tertiary">#213555</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
