--- a/Viru/MainPage.xaml
+++ b/Viru/MainPage.xaml
@@ -4,6 +4,13 @@
              Shell.NavBarHasShadow="True"
              x:Class="Viru.MainPage">
 
+
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="{StaticResource Primary}" Offset="0.1" />
+            <GradientStop Color="{StaticResource Tertiary}" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
     <Grid>
         <ListView x:Name="walletsList" RowHeight="55" Margin="5, 20, 5, 0" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="True" ItemTapped="walletsList_ItemTapped">
             <ListView.ItemTemplate>
@@ -36,7 +43,7 @@
             <!--Other components-->
             <Button x:Name="mainPageActionButton" Text="+"
                     FontSize="35" Clicked="mainPageActionButton_Clicked"
-            TextColor="White" BackgroundColor="{StaticResource Primary}"
+            TextColor="{StaticResource Primary}" BackgroundColor="White"
         CornerRadius="100"
             AbsoluteLayout.LayoutFlags="PositionProportional"  
             AbsoluteLayout.LayoutBounds="0.95, 0.975, 65, 65">
