--- a/Viru/PaymentPage.xaml
+++ b/Viru/PaymentPage.xaml
@@ -12,8 +12,8 @@
     </Shell.TitleView>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="85*" />
-            <RowDefinition Height="23*" />
+            <RowDefinition x:Name="summaryRowDefinition" Height="80*" />
+            <RowDefinition x:Name="listRowDefinition" Height="30*" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -34,37 +34,51 @@
                 Offset="0.1,0.1"
                 Opacity="1" />
             </Border.Shadow>
-            <ListView x:Name="payments" Grid.Row="0" RowHeight="55" Margin="5, 20, 5, 0" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="True" CachingStrategy="RecycleElement">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.ContextActions>
-                                <MenuItem Text="Edit" />
-                                <MenuItem x:Name="DeleteMenuItem" Text="Delete" Clicked="DeleteMenuItem_Clicked" CommandParameter="{Binding Id}" />
-                            </ViewCell.ContextActions>
-                            <Border BackgroundColor="White" Padding="12" Stroke="#F0EDEE" Margin="15, 5, 15, 5">
-                                <Border.StrokeShape>
-                                    <RoundRectangle CornerRadius="5,5,5,5" />
-                                </Border.StrokeShape>
-                                <Border.Shadow>
-                                    <Shadow Brush="{Binding PaymentColor}"
+            <Grid VerticalOptions="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition x:Name="listSwiperRowDefinition" Height="15*" />
+                    <RowDefinition Height="100*" />
+                </Grid.RowDefinitions>
+                <Border Grid.Row="0" StrokeThickness="0" VerticalOptions="Center">
+                    <Border.GestureRecognizers>
+                        <SwipeGestureRecognizer Direction="Up" Swiped="SwipeGestureRecognizer_Swiped" />
+                    </Border.GestureRecognizers>
+                    <Border x:Name="listSwiper" StrokeShape="RoundRectangle 300" HeightRequest="8" WidthRequest="150">
+                        <Rectangle BackgroundColor="Gray"  HorizontalOptions="Center" VerticalOptions="Center" HeightRequest="8" WidthRequest="150" />
+                    </Border>
+                </Border>
+                <ListView Grid.Row="1" x:Name="payments" RowHeight="55" Margin="5, 20, 5, 0" SelectionMode="None" SeparatorVisibility="None" HasUnevenRows="True" CachingStrategy="RecycleElement">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <ViewCell.ContextActions>
+                                    <MenuItem Text="Edit" />
+                                    <MenuItem x:Name="DeleteMenuItem" Text="Delete" Clicked="DeleteMenuItem_Clicked" CommandParameter="{Binding Id}" />
+                                </ViewCell.ContextActions>
+                                <Border BackgroundColor="White" Padding="12" Stroke="#F0EDEE" Margin="15, 5, 15, 5">
+                                    <Border.StrokeShape>
+                                        <RoundRectangle CornerRadius="5,5,5,5" />
+                                    </Border.StrokeShape>
+                                    <Border.Shadow>
+                                        <Shadow Brush="{Binding PaymentColor}"
                                    Offset="1,1"
                                    Radius="2"
                                    Opacity="1"/>
-                                </Border.Shadow>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50*" />
-                                        <ColumnDefinition Width="50*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Label Text="{Binding Description}" Grid.Column="0" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="16"></Label>
-                                    <Label Text="{Binding PaymentCurrency}" Grid.Column="1" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20"></Label>
-                                </Grid>
-                            </Border>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>            
+                                    </Border.Shadow>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="50*" />
+                                            <ColumnDefinition Width="50*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Label Text="{Binding Description}" Grid.Column="0" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="16"></Label>
+                                        <Label Text="{Binding PaymentCurrency}" Grid.Column="1" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20"></Label>
+                                    </Grid>
+                                </Border>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
         </Border>
 
     </Grid>
