--- a/Viru/AddPaymentPage.xaml
+++ b/Viru/AddPaymentPage.xaml
@@ -6,13 +6,13 @@
 
     <ContentPage.Background>
         <LinearGradientBrush EndPoint="0,1">
-            <GradientStop Color="{StaticResource Primary}" Offset="0.1" />
-            <GradientStop Color="{StaticResource Tertiary}" Offset="1.0" />
+            <GradientStop Color="{StaticResource Secondary}" Offset="0.1" />
+            <GradientStop Color="{StaticResource Primary}" Offset="1.0" />
         </LinearGradientBrush>
     </ContentPage.Background>
 
     <VerticalStackLayout>
-        <Button x:Name="exitButton" Text="X" HorizontalOptions="Start" Clicked="exitButton_Clicked" />
+        <Button x:Name="exitButton" Text="X" BackgroundColor="{StaticResource Secondary}" HorizontalOptions="Start" Clicked="exitButton_Clicked" />
         
         <Grid>
             <Grid.RowDefinitions>
