--- a/Viru/PaymentPage.xaml
+++ b/Viru/PaymentPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" Background="{StaticResource Tertiary}"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" Background="{StaticResource Primary}"
              x:Class="Viru.PaymentPage">
 
     <Shell.TitleView>
@@ -19,8 +19,8 @@
         <Grid Grid.Row="0">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0,1">
-                    <GradientStop Color="{StaticResource Primary}" Offset="0.1" />
-                    <GradientStop Color="{StaticResource Tertiary}" Offset="1.0" />
+                    <GradientStop Color="{StaticResource Secondary}" Offset="0.1" />
+                    <GradientStop Color="{StaticResource Primary}" Offset="1.0" />
                 </LinearGradientBrush>
             </Grid.Background>
             <Grid>
