--- a/Viru/PaymentsFullListPage.xaml
+++ b/Viru/PaymentsFullListPage.xaml
@@ -32,7 +32,7 @@
                                 <RoundRectangle CornerRadius="5,5,5,5" />
                             </Border.StrokeShape>
                             <Border.Shadow>
-                                <Shadow Brush="{Binding PaymentColor}"
+                                <Shadow Brush="{Binding PaymentTypeColor}"
                                    Offset="1,1"
                                    Radius="2"
                                    Opacity="1"/>
@@ -42,7 +42,7 @@
                                     <ColumnDefinition Width="50*" />
                                     <ColumnDefinition Width="50*" />
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{Binding Description}" Grid.Column="0" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="16"></Label>
+                                <Label Text="{Binding Description}" Grid.Column="0" TextColor="{Binding PaymentTypeColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="16"></Label>
                                 <Label Text="{Binding PaymentCurrency}" Grid.Column="1" TextColor="{Binding PaymentColor}" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20"></Label>
                             </Grid>
                         </Border>
