--- a/Viru/PaymentPage.xaml
+++ b/Viru/PaymentPage.xaml
@@ -7,7 +7,7 @@
         <Grid ColumnDefinitions="80*,18*,18*">
             <Label x:Name="TitleBarText" HorizontalOptions="Start" FontSize="18" FontAttributes="Bold" TextColor="White" Grid.Column="0" VerticalTextAlignment="Center" />
             <Button x:Name="addPaymentButton" Text="+" Grid.Column="1" FontSize="Large" HorizontalOptions="End" Clicked="addPaymentButton_Clicked" />
-            <Button Text="◢" Grid.Column="2" FontSize="Large" HorizontalOptions="Start" />
+            <Button x:Name="chartsPageButton" Text="◢" Grid.Column="2" FontSize="Large" HorizontalOptions="Start" Clicked="chartsPageButton_Clicked" />
         </Grid>        
     </Shell.TitleView>
     <Grid>
